--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 <div class="container">
-    <h2>Blogs Page</h2>
+    <br>
+    <h2 class="page-title">Blogs Page</h2>
     <div class="container">
         <div class="row">
             <div class="col-12">
