--- a/templates/base.html
+++ b/templates/base.html
@@ -14,16 +14,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="{% static 'css/style.css'}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Drop//Share</title>
 </head>
 
-<body>
+<body class="">
 
     <header>
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">Drop//Share</a>
+          <a class="navbar-brand text-warning" href="{% url 'home' %}">Drop//Share</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,22 +32,34 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'home' %}">Home</a>
+                <a class="nav-link text-white" href="{% url 'home' %}">Home</a>
               </li>
+              {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link text-white" href="{% url 'account_logout' %}">Logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="{% url 'post_blog' %}">Post a blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">Drop//Share Discussions</a>
+              </li>
+              {% else %}
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown">Account</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Login</a>
-                  <a class="dropdown-item" href="#">Sign Up</a>
+                  <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
+                  <a class="dropdown-item" href="{% url 'account_signup' %}">Sign Up</a>
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Post a blog</a>
+                <a class="nav-link text-white" href="{% url 'post_blog' %}">Post a blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Drop//Share Discussions</a>
+                <a class="nav-link text-white" href="#">Drop//Share Discussions</a>
               </li>
+              {% endif %}
             </ul>
           </div>
         </div>
@@ -55,7 +67,7 @@
 
   </header>
 
-  <main class="flex-shrink-0 main-bg">
+  <main>
     {% block content %}
     {% endblock %}
   </main>
