--- a/templates/user_post.html
+++ b/templates/user_post.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-8 align-items-start post-heading">
-            <h3 class="blog-title"> {{ post.title }}</h3>
+            <h2 class="page-title"> {{ post.title }}</h2>
             <small class="blog-sub-title"> By: {{ post.author }} | {{ post.created_on }}</small>
             <strong><i class="far fa-thumbs-up"></i>{{ post.number_of_likes }}</strong>
             <p class="col-8 align-items-start post-content">
