--- a/templates/post_blog.html
+++ b/templates/post_blog.html
@@ -7,23 +7,23 @@
         {% if user.is_authenticated %}
 
         <h2 class="page-title">Post a blog...</h2>
-        <form method="POST" action="post_blog">
+        <form method="POST" enctype="multipart/form-data" action="{% url 'post_blog' %}">
             {% csrf_token %}
             <div class="form-group">
                 <p>
                     <label for="blog_title">Title of Post:</label>
-                    <input class="form-control" type="text" id="blog_title" name="blog_title">
+                    <input class="form-control" type="text" id="blog_title" name="title">
                 </p>
             </div>
             <div class="form-group">
                 <p>
                     <label for="blog_content">Blog Content:</label>
-                    <textarea class="form-control" id="blog_content" name="blog_content" rows="10"></textarea>
+                    <textarea class="form-control" id="blog_content" name="content" rows="10"></textarea>
                 </p>
             </div>
             <div class="form-group">
                 <label for="add_image_file">Add an image:</label>
-                <input type="file" class="form-control-file" id="add_image_file">
+                <input type="file" class="form-control-file" id="add_image_file" name="featured_image">
               </div>
             <div class="form-group">
                 <p>
