--- a/templates/post_blog.html
+++ b/templates/post_blog.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% load cloudinary %}
+
+{% load crispy_forms_tags %}
 <br>
 <div class="container">
     <div class="row">
