--- a/templates/user_post.html
+++ b/templates/user_post.html
@@ -33,13 +33,34 @@
         <div class="row">
 
             <div class="col-1">
-                <!-- The number of likes goes before the closing strong tag -->
-                <strong class="text-secondary"><i class="far fa-thumbs-up"></i> {{ post.number_of_likes }} </strong>
+                <strong>
+                    {% if user.is_authenticated %}
+                    <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
+                        {% csrf_token %}
+                        {% if liked %}
+
+                        <button type="submit" value="{{post.slug}}" class="btn-like">
+                            <i class="fas fa-thumbs-up"></i>
+                        </button>
+
+                        {% else %}
+
+                        <button type="submit" value="{{post.slug}}" class="btn-like">
+                            <i class="far fa-thumbs-up"></i>
+                        </button>
+
+                        {% endif %}
+                    </form>
+                    {% else %}
+
+                    <span class="text-secondary"><i class="far fa-thumbs-up"></i></span>
+                    {% endif %}
+                    <strong class="text-secondary"> {{ post.number_of_likes }} </strong>
+                </strong>
             </div>
             <div class="col-1">
                 {% with comments.count as total_comments %}
                 <strong class="text-secondary"><i class="far fa-comments"></i>
-                    <!-- Our total_comments variable goes before the closing strong tag -->
                     {{ total_comments }}</strong>
                 {% endwith %}
             </div>
