--- a/templates/user_post.html
+++ b/templates/user_post.html
@@ -4,110 +4,121 @@
 
 {% load crispy_forms_tags %}
 <br>
-<div class="container">
-    <div class="row">
-        <div class="col-8 align-items-start post-heading">
-            <h2 class="page-title"> {{ post.title }}</h2>
-            <small class="blog-sub-title"> By: {{ post.author }} | {{ post.created_on }}</small>
-            <strong><i class="far fa-thumbs-up"></i>{{ post.number_of_likes }}</strong>
-        </div>
-        <div class="d-none d-md-block col-md-6 masthead-image post-img">
-            {% if "placeholder" in post.featured_image.url %}
-            <img class="img-thumbnail rounded float-end"
-                src="https://images.prismic.io/frameworkmarketplace/c9f009af-2392-4899-b69e-e6ef5c2d4a8c_shared-social-thumbnail-1200x630.jpg?auto=compress,format"
-                alt="Image of laptop on a desk">
-            {% else %}
-            <img class="d-none d-md-block col-md-6 masthead-image post-img rounded float-end" src=" {{ post.featured_image.url }}" alt="">
-            {% endif %}
-        </div>
-    </div>
-</div>
 
-<br>
-
-<div class="container">
-    <div class="row">
-        <p class="col-8 align-items-start post-content">
-            {{ post.content | safe }}
-        </p>
+<div class="container-fluid">
+    <h2 class="page-title"> {{ post.title }}</h2>
+    <div class="container">
         <div class="row">
-
-            <div class="col-1">
-                <strong>
-                    {% if user.is_authenticated %}
-                    <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
-                        {% csrf_token %}
-                        {% if liked %}
-
-                        <button type="submit" value="{{post.slug}}" class="btn-like">
-                            <i class="fas fa-thumbs-up"></i>
-                        </button>
-
-                        {% else %}
-
-                        <button type="submit" value="{{post.slug}}" class="btn-like">
-                            <i class="far fa-thumbs-up"></i>
-                        </button>
-
-                        {% endif %}
-                    </form>
-                    {% else %}
-
-                    <span class="text-secondary"><i class="far fa-thumbs-up"></i></span>
-                    {% endif %}
-                    <strong class="text-secondary"> {{ post.number_of_likes }} </strong>
-                </strong>
+            <div class="col-12 col-lg-6 align-items-start">
+                {% if "placeholder" in post.featured_image.url %}
+                <img class="img-thumbnail rounded float-end"
+                    src="https://images.prismic.io/frameworkmarketplace/c9f009af-2392-4899-b69e-e6ef5c2d4a8c_shared-social-thumbnail-1200x630.jpg?auto=compress,format"
+                    alt="Image of laptop on a desk">
+                {% else %}
+                <img class="d-none d-md-block col-md-6 masthead-image post-img" src=" {{ post.featured_image.url }}"
+                    alt="">
+                {% endif %}
             </div>
-            <div class="col-1">
-                {% with comments.count as total_comments %}
-                <strong class="text-secondary"><i class="far fa-comments"></i>
-                    {{ total_comments }}</strong>
-                {% endwith %}
+            <div class="col-8 align-items-start">
+                <p>
+                    By: {{ post.author }}
+                    <strong> // </strong>
+                    {{ post.created_on }}
+                    <strong> // </strong>
+                    {{ post.number_of_likes }}<i class="fas fa-thumbs-up"></i>
+                </p>
+
             </div>
         </div>
     </div>
-</div>
-<div class="row">
-    <div class="m-5 align-items-start">
-        <h4>Comments:</h4>
-        <br>
-        {% for comment in comments %}
-        <div class="comments">
-            <strong>
-                {{ comment.name }} | {{ comment.created_on }} wrote:
-            </strong>
-            <p>
-                {{ comment.body }}
-            </p>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-6 align-items-start card-body g-1">
+                <div class="card-text fs-3">
+                    <p>{{ post.content | safe }}</p>
+
+                    <div class="row">
+                        <div class="col-4">
+                            <strong>
+                                {% if user.is_authenticated %}
+                                <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
+                                    {% csrf_token %}
+                                    {% if liked %}
+                                    <button type="submit" name="blogpost_id" value="{{ post.slug }}" class="btn-like">
+                                        <i class="fas fa-thumbs-up"></i>
+                                    </button>
+                                    {% else %}
+                                    <button type="submit" name="blogpost_id" value="{{ post.slug }}" class="btn-like">
+                                        <i class="far fa-thumbs-up"></i>
+                                    </button>
+
+                                    {% endif %}
+                                </form>
+                                {% else %}
+
+                                <span class="text-secondary"><i class="far fa-thumbs-up"></i></span>
+                                {% endif %}
+                                <span class="text-secondary"> {{ post.number_of_likes }} </span>
+                            </strong>
+                        </div>    
+                        <div class="col-6">
+                            {% with comments.count as total_comments %}
+                            <strong class="text-secondary"><i class="far fa-comments"></i>
+                                {{ total_comments }}
+                            </strong>
+                            {% endwith %}
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        {% endfor %}
     </div>
-</div>
-<div class="m-5 align-items-end">
-    {% if commented %}
-    <div class="alert alert-success" role="alert">
-        Your comment is awaiting approval
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-6 align-items-start">
+                <h2>Comments:</h2>
+                <br>
+                {% for comment in comments %}
+                <div class="comments">
+                    <strong>
+                        {{ comment.name }} | {{ comment.created_on }} wrote:
+                    </strong>
+                    <p>
+                        {{ comment.body }}
+                    </p>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="col-12 align-items-start">
+            {% if commented %}
+            <div class="alert alert-success" role="alert">
+                Your comment is awaiting approval
+            </div>
+            {% else %}
+            {% if user.is_authenticated %}
+
+            <hr>
+
+            <h2>Post a comment:</h2>
+            <p>Commenting as: {{ user.username }}</p>
+            <form method="post">
+                {{ comment_form | crispy }}
+                {% csrf_token %}
+                <br>
+                <button type="submit" class="btn btn-warning form control text-dark right">Submit</button>
+            </form>
+            {% endif %}
+            {% endif %}
+
+
+
+        </div>
+
     </div>
-    {% else %}
-    {% if user.is_authenticated %}
 
-    <h4>Post a comment:</h4>
-    <p>Commenting as: {{ user.username }}</p>
-    <form method="post">
-        {{ comment_form | crispy }}
-        {% csrf_token %}
-        <button type="submit" class="btn btn-warning form control text-dark right">Submit</button>
-    </form>
-    {% endif %}
-    {% endif %}
-
-
-
-</div>
-
-</div>
-
-</div>
 </div>
 
 
