--- a/templates/index.html
+++ b/templates/index.html
@@ -4,40 +4,44 @@
 <div class="container">
     <br>
     <h2 class="page-title">Blogs Page</h2>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 mt-3 left">
                 <div class="row">
                     {% for post in post_list %}
                     <div class="col-md-4">
-                        <div class="card-body">
-                            <div class="image-containter">
-                                {% if "placeholder" in post.featured_image.url %}
-                                <img class="card-img-top"
-                                    src="https://images.prismic.io/frameworkmarketplace/c9f009af-2392-4899-b69e-e6ef5c2d4a8c_shared-social-thumbnail-1200x630.jpg?auto=compress,format"
-                                    alt="Image of laptop on a desk">
-                                {% else %}
-                                <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="">
-                                {% endif %}
-                                <div>
-                                    <p class="author"> Author: {{ post.author }}</p>
+                        <div class="card h-100 border-warning bg-dark">
+                            <div class="card-body">
+                                <div class="image-containter">
+                                    {% if "placeholder" in post.featured_image.url %}
+                                    <img class="card-img-top"
+                                        src="https://images.prismic.io/frameworkmarketplace/c9f009af-2392-4899-b69e-e6ef5c2d4a8c_shared-social-thumbnail-1200x630.jpg?auto=compress,format"
+                                        alt="Image of laptop on a desk">
+                                    {% else %}
+                                    <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="">
+                                    {% endif %}
+                                    <div>
+                                        <p class="author"> Author: {{ post.author }}</p>
+                                    </div>
                                 </div>
+                                <a href="{% url 'user_post' post.slug %}" class="text-warning post-link">
+                                    <button class="btn btn-warning text-dark card-title">{{ post.title }}</button>
+                                    <p class="card-text">{{ post.excerpt }}</p>
+                                </a>
+                                <br>
+                                <p class="card-text font-italic">{{ post.created_on }}
+                                    <i class="far fa-thumbs-up"></i>{{ post.number_of_likes }}
+                                </p>
                             </div>
-                            <a href="{% url 'user_post' post.slug %}" class="post-link">
-                                <h3 class="card-title">{{ post.title }}
-                                    <p class="card-text">{{ post.excerpt }}
-                            </a>
-                            <p class="card-text font-italic">{{ post.created_on }}
-                                <i class="far fa-thumbs-up"></i>{{ post.number_of_likes }}
-                            </p>
                         </div>
                     </div>
+                    {% if forloop.counter|divisibleby:3 %}
                 </div>
-                {% if forloop.counter|divisibleby:3 %}
-            </div>
-            <div class="row">
-                {% endif %}
-                {% endfor %}
+                <div class="row">
+                    {% endif %}
+                    {% endfor %}
+
+                </div>
             </div>
         </div>
         {% if is_paginated %}
