--- a/templates/base.html
+++ b/templates/base.html
@@ -13,15 +13,18 @@
     crossorigin="anonymous" referrerpolicy="no-referrer">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type= "text/css" href="{% static '/css/style.css' %}">
-    <title>Drop//Share</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <title>Drop//Share</title>
 </head>
 
 <body class="bg-dark text-warning">
 
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark bg-warning">
+      <nav class="navbar navbar-expand-md navbar-light bg-warning">
         <div class="container-fluid">
           <a class="navbar-brand text-dark" href="{% url 'home' %}">Drop//Share</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -59,6 +62,23 @@
         </div>
       </nav>
 
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            {% for message in messages %}
+            <div class="alert {{ message.tags }} alert-dismissible fade show"
+             id="msg" role="alert">
+             {{ message | safe }}
+             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+             </button>
+            </div>
+            {% endfor %}
+
+
+          </div>
+        </div>
+      </div>
+
   </header>
 
   <main>
@@ -69,9 +89,7 @@
   <footer>
 
   </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  </body>
+  
+</body>
 
 </html>
