--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Supermercado+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&family=Supermercado+One&display=swap');
 
 body {
-    font-style: ;
+    font-style: 'Rubik', sans-serif;;
 }
 
 .page-title {
-   font-family: 'Nanum Gothic', sans-serif;
-   font-weight: 800;
+   font-family: 'Supermercado One', cursive;
+   font-weight: 400;
 }
 
 .navbar-brand {
     font-family: 'Supermercado One', cursive;
+}
+
+.post-link {
+    text-decoration: none;
+}
+
+
+.post-content {
+    font-size: 20px;
+}
+
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
+}
+
+.navbar-light .navbar-toggler {
+    border: 1px solid black;
+}
+
+
+.btn-like {
+    background: none;
+    color: orange;
+    border: none;
 }
